fix font on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -881,7 +881,7 @@ main {
 .timeline__subtitle {
   font-family: var(--title-font);
   font-size: var(--cover-date-size);
-  font-weight: var(--font-weight-light);
+  font-weight: var(--font-weight-normal);
   letter-spacing: var(--tracking-display);
   text-transform: uppercase;
   color: var(--secondary-color);
@@ -1063,7 +1063,7 @@ main {
   font-size: var(--cover-date-size);
   font-weight: var(--font-weight-normal);
   letter-spacing: var(--tracking-date);
-  color: var(--text-dark);
+  color: var(--secondary-color);
 }
 
 /* ==========================================================================
